--- a/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
+++ b/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
@@ -1,5 +1,4 @@
- <!-- <div id="sidebar_">
-  <h2 style="font-size: 16px; font-weight: bold; margin-bottom:10px;">Suche</h2>
+  <!--<div id="sidebar_">
     <div ng-if="isCurrentState('dash')">
         <div class="dash-search form-group has-feedback">
           <input type="text" placeholder="Search.." class="form-control input-xs" ng-model="dashSearch"
@@ -9,7 +8,7 @@
         </div>
       </div>
 
-  <h2 style="font-size: 16px; font-weight: bold; margin-bottom:10px;">{{'DASHBOARD.BROWSE_GENRES' | translate}}</h2>
+    <<h2 style="font-size: 16px; font-weight: bold; margin-bottom:10px;">{{'DASHBOARD.BROWSE_GENRES' | translate}}</h2>
     <div>
       <a ng-click="changeGenre()"><i class="ion-grid"></i> All</a>
     </div>
@@ -17,6 +16,10 @@
       <a ng-click="changeGenre(genre)" ng-bind="::genre.name"></a>
     </div>
   </div>-->
+
+
+
+
 
 <div class="dashboard">
   <div ng-if="newReleases.length && !selectedGenre">
