--- a/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
+++ b/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
@@ -108,10 +108,10 @@
         <video-sort-order-dropdown current-sort="showSort" dropdown-type="'tvShow'"></video-sort-order-dropdown>
       </div>
 
-      <!--<div class="col-md-2 col-lg-2 col-sm-2">
+      <div class="col-md-2 col-lg-2 col-sm-2" style="margin-bottom: 10px; margin-top: 5px;">
         <input class="form-control input-sm" type="text" ng-model="dashFilter.tvShow.name"
                placeholder="{{'DASHBOARD.SEARCH_BY_NAME' | translate}}" />
-      </div>-->
+      </div>
     </div>
     <br>
 
@@ -167,13 +167,23 @@
             </div>
           </ui-select-choices>
         </ui-select>
-      </div>
+      </div>-->
 
-      <div class="col-md-2 col-lg-2 col-sm-2">
+
+
+
+      <div class="col-md-2 col-lg-2 col-sm-2" style="margin-bottom: 10px; margin-top: 5px;">
         <input class="form-control input-sm" type="text" ng-model="dashFilter.movie.title"
                placeholder="{{'DASHBOARD.SEARCH_BY_NAME' | translate}}" />
-      </div>-->
+      </div>
+
+
+
+
     </div>
+
+
+
     <br>
 
     <div class="spinner" ng-show="loadingMovies">
