--- a/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
+++ b/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
@@ -158,16 +158,10 @@
         {{'DASHBOARD.SORT' | translate}}
         <video-sort-order-dropdown current-sort="movieSort" dropdown-type="'movie'"></video-sort-order-dropdown>
       </div>
-      <!--<div class="col-md-2 col-lg-2 col-sm-2">
-        <ui-select class="tag-select" multiple ng-model="dashFilter.movie.tags" theme="bootstrap" title="Filter by Tag">
-          <ui-select-match placeholder="{{'DASHBOARD.FILTER_BY_TAG' | translate}}">{{$item.name}}</ui-select-match>
-          <ui-select-choices repeat="tag in tags | propsFilter: {name: $select.search}">
-            <div class="tag-wrapper">
-              <div class="tag-name" ng-bind-html="tag.name | highlight: $select.search"></div>
-            </div>
-          </ui-select-choices>
-        </ui-select>
-      </div>-->
+
+
+
+
 
 
 
@@ -177,7 +171,19 @@
                placeholder="{{'DASHBOARD.SEARCH_BY_NAME' | translate}}" />
       </div>
 
+<div class="col-md-2 col-lg-2 col-sm-2" style="margin-bottom: 6px; margin-top: 5px;">
+        <ui-select class="tag-select" multiple ng-model="dashFilter.movie.tags" theme="bootstrap" title="Filter by Tag">
+          <ui-select-match placeholder="{{'DASHBOARD.FILTER_BY_TAG' | translate}}">{{$item.name}}</ui-select-match>
+          <ui-select-choices repeat="tag in tags | propsFilter: {name: $select.search}">
+            <div class="tag-wrapper">
+              <div class="tag-name" ng-bind-html="tag.name | highlight: $select.search"></div>
+            </div>
+          </ui-select-choices>
+        </ui-select>
+      </div>
 
+
+      
 
 
     </div>
