Deleted some files

--- a/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
+++ b/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
@@ -171,7 +171,7 @@
                placeholder="{{'DASHBOARD.SEARCH_BY_NAME' | translate}}" />
       </div>
 
-<div class="col-md-2 col-lg-2 col-sm-2" style="margin-bottom: 6px; margin-top: 5px;">
+      <!--<div class="col-md-2 col-lg-2 col-sm-2" style="margin-bottom: 6px; margin-top: 5px;">
         <ui-select class="tag-select" multiple ng-model="dashFilter.movie.tags" theme="bootstrap" title="Filter by Tag">
           <ui-select-match placeholder="{{'DASHBOARD.FILTER_BY_TAG' | translate}}">{{$item.name}}</ui-select-match>
           <ui-select-choices repeat="tag in tags | propsFilter: {name: $select.search}">
@@ -180,7 +180,7 @@
             </div>
           </ui-select-choices>
         </ui-select>
-      </div>
+      </div>-->
 
 
       
