--- a/grails-app/assets/bower/owl.carousel/owl.carousel.css
+++ b/grails-app/assets/bower/owl.carousel/owl.carousel.css
@@ -26,6 +26,7 @@
   .owl-carousel .owl-stage-outer {
     position: relative;
     overflow: hidden;
+    border-radius:3px;
     box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
     /* fix for flashing background */
     -webkit-transform: translate3d(0px, 0px, 0px); }
