--- a/grails-app/assets/stylesheets/style.css
+++ b/grails-app/assets/stylesheets/style.css
@@ -743,16 +743,15 @@ hr {
       font-size: 12px; }
   .media-item .complete-watching {
     position: absolute;
-    bottom: 0px;
-    left: 0px;
-    right:0px;
+    bottom: 3px;
+    right:3px;
     opacity: 0;
     border-top:none;
     border-left:none;
     border-right:none;
     z-index: 100;
-    border-radius:0px;
-    width:100%;
+    border-radius:3px;
+    cursor:pointer;
     border-bottom:none;
     font-size: 12px;
     background: #1d2022;
@@ -839,7 +838,6 @@ hr {
     font-size: 80%;
     opacity: 0.7; }
   .media-progress-wrapper .progress-info {
-    font-weight: bold;
     line-height: 1.2em;
     white-space: nowrap;
     overflow: hidden;
@@ -1112,8 +1110,8 @@ hr {
         background-position: 50% 0%; }
     .new-releases-slider.owl-carousel .info-icon {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      bottom: 20px;
+      right: 27px;
       line-height: 1em;
       font-size: 25px;
       color: white;
@@ -1127,9 +1125,9 @@ hr {
     .new-releases-slider.owl-carousel .new-release-footer {
       position: absolute;
       /*left: 260px;*/
-      background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.71) 20%);
-      padding: 34px;
-      bottom: 0;
+      background: rgba(0, 0, 0, 0.74);
+      padding: 23px 34px;
+      height: 100%;
       display: -webkit-box;
       display: -moz-box;
       display: -ms-flexbox;
@@ -1138,7 +1136,7 @@ hr {
       -webkit-flex-align: center;
       -ms-flex-align: center;
       -webkit-align-items: center;
-      align-items: center; }
+      align-items: baseline; }
       .new-releases-slider.owl-carousel .new-release-footer .play-icon {
         -webkit-box-flex: none;
         -moz-box-flex: none;
