--- a/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
+++ b/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
@@ -55,6 +55,8 @@
 
   <h2 class="genre-display" ng-if="selectedGenre">{{'DASHBOARD.LOOKING_AT_GENRE' | translate}} <strong ng-bind="selectedGenre.name"></strong></h2>
 
+
+<div ng-if="currentUser.isUser">
   <div ng-if="continueWatching.length && !selectedGenre">
     <h3>{{'DASHBOARD.CONTINUE_WATCHING' | translate}}</h3>
 
@@ -108,6 +110,7 @@
 
     <hr/>
   </div>
+    </div>
 
   <div>
     <h3>
