--- a/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
+++ b/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
@@ -247,6 +247,20 @@
           <i class="info-icon ion-ios-information" ng-click="showDetails(movie)"></i>
           <a class="play-icon ion-ios-play" ui-sref="player({videoId: movie.id})"></a>
         </div>
+          
+
+
+
+        <div class="media-progress-wrapper">
+         <div class="fb-like" data-href="player({videoId: movie.id})" data-width="130" data-layout="button_count" data-action="recommend" data-size="small" data-show-faces="false" data-share="false"></div>
+        </div>
+
+
+
+
+
+
+
       </div>
     </div>
   </div>
