--- a/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
+++ b/grails-app/assets/javascripts/streama-app/templates/dash.tpl.htm
@@ -225,17 +225,12 @@
       {{'DASHBOARD.NO_MOVIES_FOUND' | translate}}
     </p>
 
-    <div class="media-list">
+    <!--<div class="media-list">
       <div class="media-list-item media-poster-item" ng-repeat="movie in movies | orderBy:movieSort.sort |filter: dashFilter.movieFilter">
         <div class="media-item" >
 
           <img ng-if="!movie.poster_path && !movie.poster_image_src" ng-src="{{basePath}}assets/poster-not-found.png"/>
-
           <img ng-if="movie.poster_path" ng-src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}"/>
-
-          <!--<img ng-if="movie.poster_path" ng-src="https://image.tmdb.org/t/p/w500/{{movie.backdrop_path}}"/>-->
-
-
 
           <img ng-if="movie.poster_image_src" ng-src="{{movie.poster_image_src}}"/>
 
@@ -246,23 +241,33 @@
 
           <i class="info-icon ion-ios-information" ng-click="showDetails(movie)"></i>
           <a class="play-icon ion-ios-play" ui-sref="player({videoId: movie.id})"></a>
-        </div>
-          
+        </div>  
+      </div>
+    </div>-->
 
 
+    <div class="media-list">
+      <div class="media-list-item media-poster-item-wide" ng-repeat="movie in movies | orderBy:movieSort.sort |filter: dashFilter.movieFilter">
+        <div class="media-item" >
 
-        <div class="media-progress-wrapper">
-         <div class="fb-like" data-href="player({videoId: movie.id})" data-width="130" data-layout="button_count" data-action="recommend" data-size="small" data-show-faces="false" data-share="false"></div>
-        </div>
+          <img ng-if="!movie.poster_path && !movie.poster_image_src" ng-src="{{basePath}}assets/poster-not-found.png"/>
 
+          <!--<img ng-if="movie.poster_path" ng-src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}"/>-->
+          <img ng-if="movie.backdrop_path" ng-src="https://image.tmdb.org/t/p/w500/{{movie.backdrop_path}}"/>
 
+          <img ng-if="movie.poster_image_src" ng-src="{{movie.poster_image_src}}"/>
 
+          <div class="play-text">
+            <h4 ng-bind="::movie.title"></h4>
+            <p ng-bind="::movie.release_date.substring(0,4)"></p>
+          </div>
 
-
-
-
+          <i class="info-icon ion-ios-information" ng-click="showDetails(movie)"></i>
+          <a class="play-icon ion-ios-play" style="line-height: 5em;" ui-sref="player({videoId: movie.id})"></a>
+        </div>  
       </div>
     </div>
+
   </div>
 
 
