--- a/grails-app/assets/stylesheets/style.css
+++ b/grails-app/assets/stylesheets/style.css
@@ -690,12 +690,19 @@ hr {
 
 .media-poster-item {
   width: 131px; }
+  .media-poster-item-wide {
+  width: 240px; }
   .media-poster-item .media-item {
     height: auto; }
 
 .media-item {
   position: relative;
-  height: 158px;
+  overflow: hidden;
+   }
+
+
+.media-item-wide {
+  position: relative;
   overflow: hidden; }
   .media-item img {
     width: 100%;
@@ -5324,13 +5331,34 @@ body.mdx-active #mdx-control-view {
 
   .media-list-continue-watching .media-list-item {
     width: 47%;
-    width: calc(50% - 15px); } }
+    width: calc(50% - 15px); }
+
+
+  .media-poster-item-wide {
+    width: 23%;
+    width: calc(33% - 14px); }
+    .media-poster-item-wide .media-item-wide {
+      height: auto; }
+
+  .media-list-continue-watching .media-list-item {
+    width: 47%;
+    width: calc(50% - 15px); }
+
+
+     }
 @media (max-width: 430px) {
   .media-poster-item {
     width: 47%;
     width: calc(50% - 15px); }
     .media-poster-item .media-item {
-      height: auto; } }
+      height: auto; }
+
+.media-poster-item-wide {
+    width: 47%;
+    width: calc(50% - 15px); }
+    .media-poster-item-wide .media-item {
+      height: auto; }
+       }
 
 
 .header_MAIN {
